--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "MIT"
 python = "^3.8"
 requests = "^2.24.0"
 GitPython = "^3.1.11"
+python-dateutil = "^2.8.1"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
